--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <style>
     body{
-      background-image:url(fifa.jpg);
+      background-image:url(https://github.com/ricardomartinez10/testCamp/blob/master/fifa.jpg);
       font-family: 'Roboto Slab', serif;
           background-size: cover;
     }
